[gd_scene load_steps=19 format=3 uid="uid://d0nrjv132w643"]

[ext_resource type="Script" path="res://CoffeeHandler.gd" id="1_aulta"]
[ext_resource type="Texture2D" uid="uid://dl836sg43liw3" path="res://Ideal coffee calculator header.png" id="1_dmg6c"]
[ext_resource type="Texture2D" uid="uid://ce8bol7lvuqmy" path="res://coffee mug.png" id="2_flrvw"]
[ext_resource type="Texture2D" uid="uid://b5qnkvhvb55ww" path="res://coffee mug window.png" id="3_0c0e3"]
[ext_resource type="Texture2D" uid="uid://ytd56bphmmt" path="res://beans icon.png" id="3_5k7yg"]
[ext_resource type="Texture2D" uid="uid://npeeh6uacmal" path="res://bubbles icon.png" id="3_hkwk6"]
[ext_resource type="Texture2D" uid="uid://ba2ue0g5mtv2b" path="res://chocolate icon.png" id="3_k7xcd"]
[ext_resource type="Texture2D" uid="uid://dq4icm20c0gnp" path="res://milk icon.png" id="3_shvfk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sg2gn"]
bg_color = Color(0.921569, 0.627451, 0.337255, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xfv70"]
border_width_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eyr0p"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k0ebw"]

[sub_resource type="Theme" id="Theme_lhwli"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_688r8"]
bg_color = Color(0.953125, 0.878906, 0.714844, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5n5jy"]
bg_color = Color(0.941176, 0.909804, 0.878431, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pxcx7"]
bg_color = Color(0.968627, 0.882353, 0.756863, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v1882"]
bg_color = Color(0.603922, 0.34902, 0.168627, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m6hyi"]
bg_color = Color(0.258824, 0.168627, 0.0784314, 1)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_aulta")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_sg2gn")

[node name="MarginContainer" type="MarginContainer" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="Background/MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Background/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Background/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 40

[node name="TextureRect" type="TextureRect" parent="Background/MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
size_flags_stretch_ratio = 0.3
texture = ExtResource("1_dmg6c")
expand_mode = 3
stretch_mode = 5

[node name="DrinkName" type="RichTextLabel" parent="Background/MarginContainer/HBoxContainer/VBoxContainer"]
clip_contents = false
layout_mode = 2
size_flags_vertical = 4
theme_override_colors/default_color = Color(0.953125, 0.878906, 0.714844, 1)
theme_override_font_sizes/normal_font_size = 28
bbcode_enabled = true
text = "[wave amp=50.0 freq=5.0 connected=1][center] Magic [/center][/wave]"
fit_content = true
scroll_active = false
deselect_on_focus_loss_enabled = false

[node name="HBoxContainer" type="HBoxContainer" parent="Background/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 40

[node name="MarginContainer" type="MarginContainer" parent="Background/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_top = 30
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="Background/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="EspressoSlide" type="VSlider" parent="Background/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/center_grabber = 1
theme_override_icons/grabber = ExtResource("3_5k7yg")
theme_override_icons/grabber_highlight = ExtResource("3_5k7yg")
theme_override_icons/grabber_disabled = ExtResource("3_5k7yg")
step = 5.0
rounded = true

[node name="MilkSlide" type="VSlider" parent="Background/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/center_grabber = 1
theme_override_icons/grabber = ExtResource("3_shvfk")
theme_override_icons/grabber_highlight = ExtResource("3_shvfk")
theme_override_icons/grabber_disabled = ExtResource("3_shvfk")
step = 5.0
rounded = true

[node name="FrothSlide" type="VSlider" parent="Background/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/center_grabber = 1
theme_override_icons/grabber = ExtResource("3_hkwk6")
theme_override_icons/grabber_highlight = ExtResource("3_hkwk6")
theme_override_icons/grabber_disabled = ExtResource("3_hkwk6")
step = 5.0
rounded = true

[node name="ChocolateSlide" type="VSlider" parent="Background/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/center_grabber = 1
theme_override_icons/grabber = ExtResource("3_k7xcd")
theme_override_icons/grabber_highlight = ExtResource("3_k7xcd")
theme_override_icons/grabber_disabled = ExtResource("3_k7xcd")
theme_override_styles/slider = SubResource("StyleBoxFlat_xfv70")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_eyr0p")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_k0ebw")
step = 5.0
rounded = true

[node name="Cup" type="TextureRect" parent="Background/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("2_flrvw")
expand_mode = 3
stretch_mode = 5

[node name="ClipMask" type="TextureRect" parent="Background/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/Cup"]
clip_children = 1
custom_minimum_size = Vector2(200, 200)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme = SubResource("Theme_lhwli")
texture = ExtResource("3_0c0e3")
expand_mode = 3
stretch_mode = 5

[node name="Background" type="Panel" parent="Background/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/Cup/ClipMask"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_688r8")

[node name="Froth" type="Panel" parent="Background/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/Cup/ClipMask"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_5n5jy")

[node name="Milk" type="Panel" parent="Background/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/Cup/ClipMask"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_pxcx7")

[node name="Chocolate" type="Panel" parent="Background/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/Cup/ClipMask"]
custom_minimum_size = Vector2(600, 180)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_v1882")

[node name="Espresso" type="Panel" parent="Background/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/Cup/ClipMask"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_m6hyi")

[node name="HBoxContainer2" type="HBoxContainer" parent="Background/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2
alignment = 1

[node name="Button" type="Button" parent="Background/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Yi"

[node name="MarginContainer2" type="MarginContainer" parent="Background/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="value_changed" from="Background/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/MarginContainer/HBoxContainer/EspressoSlide" to="." method="_on_espresso_slide_value_changed"]
[connection signal="value_changed" from="Background/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/MarginContainer/HBoxContainer/MilkSlide" to="." method="_on_milk_slide_value_changed"]
[connection signal="value_changed" from="Background/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/MarginContainer/HBoxContainer/FrothSlide" to="." method="_on_froth_slide_value_changed"]
[connection signal="value_changed" from="Background/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/MarginContainer/HBoxContainer/ChocolateSlide" to="." method="_on_chocolate_slide_value_changed"]
